@@ -1,4 +1,4 @@
-package com.spring.ecom.service;
+package com.spring.ecom.services;
 
 import com.spring.ecom.entities.Address;
 import com.spring.ecom.entities.Product;
@@ -70,7 +70,7 @@ public class UserService {
     @Transactional
     public void deleteRelated(){
         var user = userRepository.findById(3L).orElseThrow();
-        var address = user.getAddresses().getFirst();
+        var address = user.getAddresses().get(0);
         user.removeAddress(address);
         userRepository.save(user);
     }
